Show topic summary on the topic list

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 </div>
 <script type="text/javascript" src="static/js/lib/director-1.0.8.min.js" ></script>
 <script type="text/javascript" src="modules.js"></script>
+
 <script type="text/javascript" src="static/js/ui.js"></script>
+<script type="text/javascript" src="static/js/lib/bootstrap-tooltip.js"></script>
 
 </body>
 </html>
