Works now with new dashboard.

--- a/index.html
+++ b/index.html
@@ -3,22 +3,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" type="text/css" href="static/css/main.css"/>
-    <link rel="stylesheet" type="text/css" href="kanso-topbar/topbar.css"/>
+
     <title>TopicFlow</title>
 </head>
 <body>
-
-<div id="kanso-topbar">
-    <div class="appname">TopicFlow</div>
-    <ul class="nav">
-        <li class="apps active">
-            <a href="#/topics">Topics</a>
-        </li>
-        <li class="tags"><a href="#/tags">Tags</a></li>
-        <li class="users"><a href="#/users">Users</a></li>
-        <li class="unanswered"><a href="#/unanswered">Unanswered</a></li>
-    </ul>
-</div>
 
 <div class="container" role="main">
 
@@ -37,6 +25,7 @@
 
 <script type="text/javascript" src="static/js/ui.js"></script>
 <script type="text/javascript" src="static/js/lib/bootstrap-tooltip.js"></script>
+<script type="text/javascript" src="/dashboard/_design/dashboard/_rewrite/static/js/topbar.js"></script>
 
 </body>
 </html>
