Add localstorage cache for forms to help with writing posts before login.

--- a/index.html
+++ b/index.html
@@ -22,9 +22,15 @@
 </div>
 <script type="text/javascript" src="static/js/lib/director-1.0.8.min.js" ></script>
 <script type="text/javascript" src="modules.js"></script>
+<script type="text/javascript">
+    // so the jquery plugins work
+    window.$ = window.jQuery = require('jquery');
 
+</script>
+<script type="text/javascript" src="static/js/lib/sisyphus.min.js"></script>
 <script type="text/javascript" src="static/js/ui.js"></script>
 <script type="text/javascript" src="static/js/lib/bootstrap-tooltip.js"></script>
+
 <script type="text/javascript" src="/dashboard/_design/dashboard/_rewrite/static/js/topbar.js"></script>
 
 </body>
