Adding answer voting.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 </div>
-<script type="text/javascript" src="static/js/lib/director-1.0.8.min.js" ></script>
+<script type="text/javascript" src="static/js/lib/director-1.0.9-1.min.js" ></script>
 <script type="text/javascript" src="modules.js"></script>
 <script type="text/javascript">
     // so the jquery plugins work
