Adding tag support.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" type="text/css" href="static/css/main.css"/>
-
+    <link rel="stylesheet" type="text/css" href="static/css/chosen.css"/>
     <title>TopicFlow</title>
 </head>
 <body>
@@ -30,6 +30,7 @@
 <script type="text/javascript" src="static/js/lib/sisyphus.min.js"></script>
 <script type="text/javascript" src="static/js/ui.js"></script>
 <script type="text/javascript" src="static/js/lib/bootstrap-tooltip.js"></script>
+<script type="text/javascript" src="static/js/lib/chosen.jquery.min.js"></script>
 
 <script type="text/javascript" src="/dashboard/_design/dashboard/_rewrite/static/js/topbar.js"></script>
 
